--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "@nuxt/test-utils": "^3.17.2",
     "@nuxt/ui": "^3.0.0",
     "@nuxtjs/device": "^3.2.4",
+    "@simplewebauthn/browser": "^11.0.0",
+    "@simplewebauthn/server": "^11.0.0",
     "@unhead/vue": "^2.0.0-rc.8",
     "@vueuse/nuxt": "^13.0.0",
+    "bcrypt": "^5.1.1",
     "compodium": "^0.1.0-beta.5",
     "dayjs-nuxt": "^2.1.11",
     "eslint": "^9.22.0",
     "mongoose": "^8.12.2",
     "nuxt": "^3.16.0",
+    "nuxt-auth-utils": "^0.5.17",
     "typescript": "^5.8.2",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
